# MLProject

./: pyproject.toml  requirements.txt  setup.py
notebook/: 1 . EDA STUDENT PERFORMANCE .py  1 . EDA STUDENT PERFORMANCE.ipynb  2. MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py  logger.py
src/Components/: Data_ingestion.py
