[project]
name = "mlproject"
version = "0.1.0"
description = "Machine Learning Project"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.10",
    "flask>=3.1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
